# linfo

./: .gitmodules  Cargo.toml
gen_spdx/: Cargo.toml  TEMPLATE.rs
gen_spdx/data/: README.md
gen_spdx/src/: main.rs  props.rs
gen_spdx/src/license/: mod.rs  render.rs
src/: expr.rs  lib.rs  macros.rs  permissions.rs  requirements.rs  util.rs
src/spdx/: decl.rs  gen.rs  mod.rs  props.rs  serde.rs
