[package]
name = "gen_spdx"
version = "0.0.0"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
description = "Generate Rust code for `linfo` from SPDX license info."
edition = "2018"
publish = false

[[bin]]
name = "gen_spdx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.3"
regex = "1.3"
lazy_static = "1.4"
